--- a/avalia.html
+++ b/avalia.html
@@ -27,6 +27,7 @@
             <div class="questions">
                 <form action="salvalia.php" method="post" id="form">
                     <div class="part">
+                        <input type="number" name="id_aval">
                         <h4>Nota Tempo (1-5)</h4>
                         <input type="radio" name="tempo" value="1">
                         <input type="radio" name="tempo" value="2">
