--- a/inclui.html
+++ b/inclui.html
@@ -20,8 +20,11 @@
         </div>
     </header>
     <div class="main">
+        <div class="text-container">
+            <h3><b>Monte sua versão da delícia</b></h3>
+            <h4>Uma boa sobremesa começa <br>com uma boa escolha.</h4>
+        </div>
         <div class="container">
-            <h3>Monte sua versão da delícia</h3>
             <div class="questions">
                 <form method="post" id="form" action="salva.php">
                     <input type="hidden" name="id_pedido">
@@ -95,14 +98,15 @@
         .line-container h4 {text-align: center; font-family: 'Montserrat', sans-serif; font-size:12px; color: #FFEEF4;}
         .line{width:20vw; height:0.5vh; margin:0.2vh 0; background-color: #AEC3AE;}
         select{border: 2px solid #eec387; border-radius:5%;background-color: #cdb593; color:rgb(13, 34, 90); font-family:'Montserrat Alternates', sans-serif; font-weight: 400;}
-        .main{background-color: #EAD7BB;height: 93vh;display: flex; justify-items: center; align-items: center; justify-content: center; align-content: center;text-align: center;width:100vw;}
+        .main{background-color: #EAD7BB;height: 93vh;display: flex; align-items:center;  justify-items: center; justify-content: space-evenly;width:100vw;}
         .container{text-align:center;}
         .questions{display:flex; margin: 8vh 0; align-content: space-evenly;height: 40vh;align-items: center; background-color: #a38f73;border-radius: 6.5%;width: 20vw; justify-content: center;box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;}
         label{color: #ecd65a; font-weight: 500; font-family: 'Montserrat Alternates', sans-serif;}
         h5{color: #ecd65a; font-weight: 500; font-family: 'Montserrat Alternates', sans-serif;}
         #sabor2{margin:5vh 0;}
         #tipo{margin: 0 0 5vh 0;}
-        .container h3{text-align: center; font-family: 'Montserrat', sans-serif;font-size: 28px;}
+        h3{text-align: center; font-family: 'Montserrat', sans-serif;font-size: 28px; color: #4a310c;}
+        h4{text-align: center; font-family: 'Montserrat', sans-serif;font-size: 24px; color: #8b7557;}
         button{margin: 3vh auto 0 auto; display: flex; border-radius: 6%; border: 2px solid #d8b532;background-color: #ecd65a;padding: 8px 12px;transition:0.2s;}
         button:hover{background-color: #816b4c; color: #f6e3c7; border: 2px solid #71634f; transform: scale(120%);}
         .top a{text-decoration: none;}
